objects/ActivityLog__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <label>Account Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <label>Account Industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Object__c</fullName>
        <label>History Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ownership</label>
        <referenceTo>Ownership__c</referenceTo>
        <relationshipLabel>Activity Logs</relationshipLabel>
        <relationshipName>Activity_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plate</label>
        <referenceTo>Plate__c</referenceTo>
        <relationshipLabel>Activity Logs</relationshipLabel>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Activity Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>